tests/ui/structopt_name_value_attr.stderr
error: proc-macro derive panicked
  --> $DIR/structopt_name_value_attr.rs:13:10
   |
13 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
   |
   = help: message: unsupported syntax: structopt = "short"
